--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -1,1 +1,16 @@
-hello haml!
+.header
+  グループ作成しました。
+
+.side-contents
+  .side-contents__user
+    .side-contents__user__name
+      ちぇぶ
+    =link_to "" do ;
+      =fa_icon "cog", class:'side-contents__user__btn'
+    =link_to "" do ;
+      =fa_icon "edit", class:'side-contents__user__btn'
+  .side-contents__group
+    .side-contents__group__name
+    サイゼジャパン
+    .side-contents__group__text
+      Hello!!!  
