--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -3,10 +3,10 @@
   .side-contents__user
     .side-contents__user__name
       user1
-    =link_to "" do ;
+    =link_to "#" do ;
       =fa_icon "cog", class:'side-contents__user__btn'
       %span<>
-    =link_to "" do ;
+    =link_to "#" do ;
       =fa_icon "edit", class:'side-contents__user__btn'
       %span<>
   .side-contents__group
@@ -23,7 +23,7 @@
       .contents__header__left__member
         Member: user1 user2
     .contents__header__btn
-      = link_to "Edit", "", class: "contents__header__btn__edit" ;
+      = link_to "Edit", "#", class: "contents__header__btn__edit" ;
   .contents__messages 
     .contents__messages__box
       .contents__messages__box__name
