--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -3,7 +3,7 @@
   .side-contents__user
     .side-contents__user__name
       user1
-    =link_to "#" do ;
+    =link_to "users/:id/edit" do ;
       =fa_icon "cog", class:'side-contents__user__btn'
       %span<>
     =link_to "#" do ;
