--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,5 +1,12 @@
-@import "./reset";
 @import "font-awesome";
+@import "config/colors";
+// @import "config/size";
+@import "reset";
 @import "variable";
-@import "modeles/user";
+@import "config/flash";
+// @import "mixins/mixin";
+// @import "mixins/vendor_prefix";
+// @import "modules/side_bar";
+// @import "modules/chat";
+@import "user";
 @import "messages";
