group_creating_feature

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -4,6 +4,7 @@
 @import "reset";
 @import "variable";
 @import "config/flash";
+@import "modules/group";
 // @import "mixins/mixin";
 // @import "mixins/vendor_prefix";
 // @import "modules/side_bar";
