--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -1,20 +1,6 @@
 
 .side-contents
-  .side-contents__user
-    .side-contents__user__name
-      user1
-    =link_to "users/:id/edit" do ;
-      =fa_icon "cog", class:'side-contents__user__btn'
-      %span<>
-    =link_to "#" do ;
-      =fa_icon "edit", class:'side-contents__user__btn'
-      %span<>
-  .side-contents__group
-    .side-contents__group__name
-    サイゼジャパン
-    .side-contents__group__text
-      Hello!!!  
-
+  = render "shared/side_bar" 
 .contents
   .contents__header
     .contents__header__left
