--- a/app/assets/stylesheets/_messages.scss
+++ b/app/assets/stylesheets/_messages.scss
@@ -24,20 +24,20 @@
             line-height: 100px;
             }
         }
-    &__group{
+    &__groups{
         background-color: #2f3e51;
         padding: 0 20px;
-        color:$white_color;
         &__name{
             font-size: 15px;
             font-weight: bold;
             padding: 20px 0 5px;
-
+            color: white;
         }
         &__text{
             font-size: 11px;
             font-weight: bold;
             padding-bottom: 40px;
+            color: white;
 
         }
         
