--- a/app/views/groups/new.html.haml
+++ b/app/views/groups/new.html.haml
@@ -1,11 +1,11 @@
 .chat-group-form
   %h1 新規チャットグループ
-    = form_for @group do |f|
-      - if @group.errors.any?
-        .chat-group-form__errors
-          %h2= "#{@group.errors.full_messages.count}件のエラーが発生しました。"
-          %ul
-            - @group.errors.full_messages.each do |message|
+  = form_for (@group) do |f|
+    - if @group.errors.any?
+      .chat-group-form__errors
+        %h2= "#{@group.errors.full_messages.count}件のエラーが発生しました。"
+        %ul
+          - @group.errors.full_messages.each do |message|
             %li= message
     .chat-group-form__field.clearfix
       .chat-group-form__field--left
@@ -26,8 +26,9 @@
         </div>
     .chat-group-form__field.clearfix
       .chat-group-form__field--left
-        = f.label :name, "チャットメンバー", class: "chat-group-form__label"
+        %label.chat-group-form__label{:for => "chat_group_チャットメンバー"} チャットメンバー
       .chat-group-form__field--right
+        = f.collection_check_boxes :user_ids, User.all, :id, :name 
         / グループ作成機能の追加時はここにcollection_check_boxesの記述を入れてください
         / この部分はインクリメンタルサーチ（ユーザー追加の非同期化のときに使用します
         /
@@ -40,4 +41,4 @@
     .chat-group-form__field.clearfix
       .chat-group-form__field--left
       .chat-group-form__field--right
-        = f.submid class: "chat-group-form__action-btn"
+        = f.submit class: "chat-group-form__action-btn"
