--- a/app/views/shared/_side_bar.html.haml
+++ b/app/views/shared/_side_bar.html.haml
@@ -2,22 +2,16 @@
   .side-contents__user
     .side-contents__user__name
       = current_user.name
-    =link_to "" do ;
-      =fa_icon "cog", class:'side-contents__user__btn'
-    =link_to "" do ;
-      =fa_icon "edit", class:'side-contents__user__btn'
-  .side-contents__group
-    .side-contents__group__name
-    サイゼジャパン
-    .side-contents__group__text
-      Hello!!!  
-    .group
-      .group__name
-        グループ名
-      .group__message
-        新着メッセージ
-    .group
-      .group__name
-        グループ名
-      .group__message
-        新着メッセージ
+    = link_to "#" do
+      = fa_icon "cog", class:'side-contents__user__btn'
+    = link_to new_group_path do
+      = fa_icon "edit", class:'side-contents__user__btn'
+      
+  .side-contents__groups
+    - current_user.groups.each do |group|
+      = link_to group_messages_path(group) do
+        .side-contents__groups__name
+          = group.name
+        .side-contents__groups__text
+          メッセージはまだありません。
+                  
