--- a/app/assets/stylesheets/_variable.scss
+++ b/app/assets/stylesheets/_variable.scss
@@ -2,3 +2,12 @@ $white_color: #FFFFFF;
 $white_color2: #fafafa;
 $blue: #38AEF0;
 $string: #434A54;
+$light_gray: gray;
+$light_blue: #00ffff;
+$black: black;
+$white: white;
+$side_blue_dark: #00008B;
+$side_header_font: 20px;
+$side_blue_light: #00BFFF;
+$side_group_name: 35px;
+$side_group_message: 15px;
