--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -7,7 +7,7 @@
 @import "modules/group";
 // @import "mixins/mixin";
 // @import "mixins/vendor_prefix";
-// @import "modules/side_bar";
-// @import "modules/chat";
+@import "modules/side_bar";
+@import "modules/chat";
 @import "user";
 @import "messages";
