--- a/app/views/groups/edit.html.haml
+++ b/app/views/groups/edit.html.haml
@@ -1,34 +1,3 @@
 .chat-group-form
   %h1 チャットグループ編集
-  = form_for @group do |f|
-    #edit_chat_group_22.edit_chat_group
-      .chat-group-form__errors
-        %h2
-          1件のエラーが発生しました。
-          %ul
-            %li エラーです
-      .chat-group-form__field.clearfix
-        .chat-group-form__field--left
-          = f.label :name, "グループ名", class: 'chat-group-form__label'
-        .chat-group-form__field--right
-          = f.text_field :name, "グループ名", placeholder: 'グループ名を記入してください', class: 'chat_group_name.chat-group-form__input'
-      .chat-group-form__field.clearfix
-        / この部分はインクリメンタルサーチ（ユーザー追加の非同期化のときに使用します
-        /
-          <div class='chat-group-form__field--left'>
-          <label class="chat-group-form__label" for="chat_group_チャットメンバーを追加">チャットメンバーを追加</label>
-          </div>
-          <div class='chat-group-form__field--right'>
-          <div class='chat-group-form__search clearfix'>
-          <input class='chat-group-form__input' id='user-search-field' placeholder='追加したいユーザー名を入力してください' type='text'>
-          </div>
-          <div id='user-search-result'></div>
-          </div>
-      .chat-group-form__field.clearfix
-        .chat-group-form__field--left
-          = f.label :name,"チャットメンバー", class: "chat-group-form__label"
-      .chat-group-form__field.clearfix
-        .chat-group-form__field--left
-        .chat-group-form__field--right
-          / グループ作成機能の追加時はここにcollection_check_boxesの記述を入れてください
-          = f.submit "Send", class: "chat-group-form__action-btn"
+  = render partial: 'form', locals: { group: @group }
