--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -1,4 +1,3 @@
-
 .side-contents
   = render "shared/side_bar" 
 .contents
@@ -9,7 +8,7 @@
       .contents__header__left__member
         Member: user1 user2
     .contents__header__btn
-      = link_to "Edit", "#", class: "contents__header__btn__edit" ;
+      = link_to "Edit", edit_group_path(@group) , class: "contents__header__btn__edit" 
   .contents__messages 
     .contents__messages__box
       .contents__messages__box__name
@@ -25,11 +24,10 @@
       .contents__messages__box__text
         さようなら。
   .form
-    .form-box
-      %input#message_content.form-box__text{name: "message", placeholder: "type a message", type: "text"}
-        %label.form-box__image{for: "message_image"}
-          %i.fa.fa-image
-            %input#message_image.form-box__image__file{name: "message[image]", type: "file"}
-    %input.submit-btn{type: "submit", name: "commit", value: "Send"}      
-    
-
+    = form_for [@group, @message] do |f|
+      = f.text_field :content, class: 'form__text', placeholder: "type a message"
+      .form-box
+        = f.label :image, class: "form-box__image" do
+          = fa_icon 'picture-o', class: 'icon'
+          = f.file_field :image, class: 'form-box__image__file'
+      = f.submit 'Send', class: 'submit-btn'
