--- a/app/views/shared/_side_bar.html.haml
+++ b/app/views/shared/_side_bar.html.haml
@@ -2,11 +2,11 @@
   .side-contents__user
     .side-contents__user__name
       = current_user.name
-    = link_to "#" do
+    = link_to edit_user_path(current_user) do
       = fa_icon "cog", class:'side-contents__user__btn'
     = link_to new_group_path do
       = fa_icon "edit", class:'side-contents__user__btn'
-      
+
   .side-contents__groups
     - current_user.groups.each do |group|
       = link_to group_messages_path(group) do
