message_sending_complete

--- a/app/views/shared/_side_bar.html.haml
+++ b/app/views/shared/_side_bar.html.haml
@@ -13,5 +13,5 @@
         .side-contents__groups__name
           = group.name
         .side-contents__groups__text
-          メッセージはまだありません。
+          = group.show_last_message
                   
