--- a/app/assets/stylesheets/_messages.scss
+++ b/app/assets/stylesheets/_messages.scss
@@ -105,7 +105,7 @@
                 color: #999999;
                 display: inline-block;
             }
-            &__text{
+            &__lower__content{
                 margin: 10px 0 40px;
                 font-size: 14px;
                 color: $string;
