--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -4,25 +4,15 @@
   .contents__header
     .contents__header__left
       .contents__header__left__group
-        サイゼジャパン
+        = @group.name
       .contents__header__left__member
-        Member: user1 user2
+        - @group.users.each do |user|
+          = user.name
     .contents__header__btn
       = link_to "Edit", edit_group_path(@group) , class: "contents__header__btn__edit" 
   .contents__messages 
-    .contents__messages__box
-      .contents__messages__box__name
-        user1
-      .contents__messages__box__date
-        2019/06/22(Sat) 21:00:00
-      .contents__messages__box__text
-        こんにちは！！
-      .contents__messages__box__name
-        user2
-      .contents__messages__box__date
-        2019/06/22(Sat) 21:00:10
-      .contents__messages__box__text
-        さようなら。
+    = render @messages
+    
   .form
     = form_for [@group, @message] do |f|
       = f.text_field :content, class: 'form__text', placeholder: "type a message"
