--- a/app/assets/stylesheets/_messages.scss
+++ b/app/assets/stylesheets/_messages.scss
@@ -5,6 +5,7 @@
     float: left;
     background-color: #2f3e51;
     display: block;
+    position: fixed;
     &__user{
         height: 100px;
         background-color: #253141;
@@ -57,6 +58,8 @@
         color: #333333;
         border-bottom: solid 1px #eeeeee;
         padding: 0 40px;
+        position: fixed;
+        width: 1050px;
         &__left{
             float: left;
             height: 100px;
@@ -92,6 +95,7 @@
     &__messages{
         padding: 46px 40px 0;
         background-color: $white_color2;
+        width: calc(100vw - 300px);
         &__box{
             margin-bottom: 40px;        
             &__name{
@@ -115,13 +119,13 @@
     }
     .form{
         height: 90px;
-        width: 100%;
+        width: calc(100vw - 300px);
         padding: 20px 50px 20px 40px;
         background-color:#DDDDDD;
         box-sizing: border-box;
-        position: absolute;
+        position: fixed;
         bottom: 0;
-        // display: flex;
+        
 
         & form {
             display: flex;
@@ -156,6 +160,7 @@
                 }
                 &__file{
                     display: none;
+                    z-index: 1;
                 }
             }
         }
