--- a/app/views/messages/_message.html.haml
+++ b/app/views/messages/_message.html.haml
@@ -2,7 +2,7 @@
     .contents__messages__box__name
         = message.user.name
     .contents__messages__box__date
-        = message.created_at.strftime("%Y/%m/%d %H/%M")
+        = message.created_at.strftime("%Y/%m/%d %H:%M")
     .contents__messages__box__lower
         - if message.content.present?
             %p.contents__messages__box__lower__content
