--- a/app/assets/stylesheets/modules/group.scss
+++ b/app/assets/stylesheets/modules/group.scss
@@ -48,6 +48,7 @@
       display: block;
     }
 
+    .chat-group-form__field--leftform,
     .chat-group-form__field--left {
       float: left;
       width: 30%;
