--- a/app/views/messages/_message.html.haml
+++ b/app/views/messages/_message.html.haml
@@ -1,4 +1,4 @@
-.contents__messages__box
+.contents__messages__box{data: {id: "message.id"}}
     .contents__messages__box__name
         = message.user.name
     .contents__messages__box__date
