--- a/app/views/groups/_form.html.haml
+++ b/app/views/groups/_form.html.haml
@@ -25,7 +25,9 @@
             #member-search-result
                 .chat-group-user.clearfix.js-chat-member#chat-group-user-8
                     %input{name: "group[user_ids][]", type: "hidden", value: "#{current_user.id}"}
-                    %p.chat-group-user__name #{current_user.name}
+                    %p.chat-group-user__name #{current_user.name} 
+                    - @group.users.each do |user|
+                        = user.name
             
     .chat-group-form__field.clearfix
         .chat-group-form__field--left
