--- a/app/views/groups/_form.html.haml
+++ b/app/views/groups/_form.html.haml
@@ -23,11 +23,14 @@
             %label.chat-group-form__label{for: "chat_group_チャットメンバー"} チャットメンバー
         .chat-group-form__field--right
             #member-search-result
-                .chat-group-user.clearfix.js-chat-member#chat-group-user-8
-                    %input{name: "group[user_ids][]", type: "hidden", value: "#{current_user.id}"}
-                    %p.chat-group-user__name #{current_user.name} 
-                    - @group.users.each do |user|
-                        = user.name
+                - @group.users.each do |user|
+                    .chat-group-user.clearfix.js-chat-member
+                        %input{name: "group[user_ids][]", type: "hidden", value: "#{user.id}"}/
+                        %p.chat-group-user__name 
+                            = user.name
+                        .user-search-remove.chat-group-user__btn.chat-group-user__btn--remove.js-remove-btn
+                            - if current_user.id != user.id
+                                削除
             
     .chat-group-form__field.clearfix
         .chat-group-form__field--left
