--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -14,7 +14,7 @@
     = render @messages
     
   .form
-    = form_for [@group, @message] do |f|
+    = form_for [@group, @message], format: 'json',class: "new_message" do |f|
       = f.text_field :content, class: 'form__text', placeholder: "type a message"
       .form-box
         = f.label :image, class: "form-box__image" do
